# network-monitoring-psu

./: .env  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  tempCodeRunnerFile.py  ดิสบอกให้ใสtext.txt
app/: __init__.py  acl.py  caches.py  oauth2.py  utils.py
app/dash/: __init__.py  access_point_monthly.py  host_monthly.py  host_quarterly.py  service_monthly.py
app/dash/callback/: __init__.py  monthly_callbacks.py
app/forms/: __init__.py  location.py  login.py  report.py
app/helpers/: api.py  utils.py
app/models/: __init__.py  accesspoints.py  address.py  hosts.py  locations.py  oauth2.py  reports.py  services.py  sla_config.py  users.py
app/static/: package.json
app/static/css/: loader.css  main.css  monthPicker.css  navigation.css  output.css
app/static/js/: accessPointMap.js  adminHome.js  home.js  hostMap.js  hostTable.js  issueCategory.js  location.js  locationMap.js  locationTable.js  map.js  modeRender.js  modeSystem.js  navigation.js  quarterlyTable.js  reportDetailMap.js  reportMap.js  reportTable.js  serviceTable.js  slaTable.js  userPermissionTable.js
app/static/utils/: handleExpandMap.js  handleLimitLength.js  handleSelectTab.js
app/templates/: index.html  login.html  report.html  reportHistory.html
app/templates/admin/: category.html  createLocation.html  downAccessPoint.html  (+8 more)
app/views/: site.py
nwms/: default_settings.py
nwms/cmd/: web.py
nwms/models/: __init__.py  categories.py  hosts.py  oauth2.py  sla_config.py
nwms/web/: __init__.py  acl.py  oauth2.py
(+70 files in other folders)
